k8s/namespaces/base/litmus/litmus/app/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/networking.istio.io/virtualservice_v1alpha3.json
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chaos-center
  namespace: litmus
spec:
  hosts:
    - 'chaos-center.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 9091
            host: litmus-frontend-service.litmus.svc.cluster.local
          weight: 100
